# mindbox

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
shapes_lib/: README.md  pyproject.toml
shapes_lib/src/shapes_lib/: __init__.py  circle.py  core.py  registry.py  triangle.py
shapes_lib/tests/: test_circle.py  test_factory_and_api.py  test_placeholder.py  test_right_triangle.py  test_triangle.py
spark_tasks/: README.md  requirements.txt
spark_tasks/notebooks/: product_category_pairs.ipynb
